AUGREL/src/objects/Eligible_Offer__c.object
<CustomObject>
    <description>This is the Junction object between FA and Next Best Offer. This object stores the list of all eligible customers for an offer/Action</description>
    <fields>
        <fullName>Certificate_Number__c</fullName>
        <description>This is the certificate number that is generated for each eligible customer. Business will upload this data in Salesforce.</description>
        <label>Certificate Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_Date__c</fullName>
        <description>This is when the offer begins to be active for the FA</description>
        <label>Eligible Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date for the offer. This is the date when the offer is expired</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial Account to which it is related to</description>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Eligible Offers</relationshipLabel>
        <relationshipName>Eligible_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Best_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Next Best Action it is related to</description>
        <label>Next Best Action</label>
        <referenceTo>Next_Best_Action__c</referenceTo>
        <relationshipLabel>Eligible Offers</relationshipLabel>
        <relationshipName>Eligible_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Offer</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Eligible Offer</label>
    <nameField>
        <label>Eligible Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eligible Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>